Closed Bug 228986 Opened 22 years ago Closed 22 years ago

XPInstall - crash after installing two extensions without restart

Categories

(Toolkit :: Downloads API, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.6

People

(Reporter: momokatte, Assigned: bugs)

Details

(Keywords: crash, regression, Whiteboard: 0.8 branch only)

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6b) Gecko/20031218 Firebird/0.7+ Build Identifier: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6b) Gecko/20031218 Firebird/0.7+ Mozilla Firebird crashes after installing two extensions indivdually without restarting the browser. Reproducible: Always Steps to Reproduce: 1. Install an extension, and do not restart the browser when complete. 2. Install another extension. 3. Crash. MOZILLAFIREBIRD caused an invalid page fault in module MOZILLAFIREBIRD.EXE at 017f:00822035. Registers: EAX=00000006 CS=017f EIP=00822035 EFLGS=00010246 EBX=00000000 SS=0187 ESP=00e5f9a4 EBP=00e5fa28 ECX=00000000 DS=0187 ESI=00000000 FS=0fcf EDX=00e5f9a4 ES=0187 EDI=10041226 GS=262f Bytes at CS:EIP: 66 89 41 40 c2 04 00 ff 74 24 04 83 c1 2c ff 15 Stack dump: 0082175c 00000006 00000003 02250470 30013e40 10043e28 0230cb40 00000000 00000000 00008a2c 0000000c 0200262f 89fa0000 00030000 00527310 17af10d0
Flags: blocking0.8?
Attached file Crash Log for OSX 10.3.2 (obsolete) —
It reappeared. Mac OSX 10.3.2 & Mozilla Firebird which it builds from FIREBIRD_0_8_BRANCH. Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; ja-JP; rv:1.6b) Gecko/20031220 Firebird/0.7+
Attachment #137736 - Attachment is obsolete: true
Sorry... It is Log where this is correct.
I can confirm this with a new profile and this build (newly downloaded): Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6b) Gecko/20031218 Firebird/0.7+
I Confirm this on Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6b) Gecko/20031218 Firebird/0.7+ With Win XP SP1
Severity: critical → major
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows 98 → All
Seems to be for branch builds only because it works for me on this trunk build: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6b) Gecko/20031216 Firebird/0.7+
Confirmed Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6b) Gecko/20031218 Firebird/0.7+
Confirmed Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6b) Gecko/20031218 Firebird/0.7+
Confirming after a VNC session to an NT4 box, using whatever was in /nightly/latest-0.8 approx 10 mins ago ('1218 build). Additional testing from #firebird seems to indicate that this only appears on the 0.8 branch, not the trunk.
Severity: major → critical
Keywords: crash
Hardware: PC → All
Whiteboard: 0.8 branch only
Keywords: regression
How does this count as a regression?
Previously it didn't crash
.
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → Firebird0.8
This happens if I install a theme and then an extension.
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
anton@avbohemen.demon.nl says this caused a regression, bug 229600, "Installing 2 extensions without restarting re-launches extension-installer for previous installed extensions".
Reopening People on Linux have seen this crash in the latest branch build (including myself) Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6b) Gecko/20040109 Firebird/0.7+
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7a) Gecko/20040107 Firebird/0.8.0+ (daihard: XFT+GTK2; optimized for P4/SSE-2) This is not my current build, but I installed eight extensions in a row and did not get it to crash. I'm now on the 20040110 build, and installing one extension does not trigger the bug.
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7a) Gecko/20040107 Firebird/0.7+ (daihard: XFT+GTK2; optimized for P4/SSE-2) The build mentioned above is not my current build, but when using this build I installed seven or eight extensions in a row and did not experience any crashes. On this build: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7a) Gecko/20040110 Firebird/0.8.0+ (daihard: XFT+GTK2; optimized for P4/SSE-2) I installed one extension and did not experience a crash, so the nature of the bug has not changed.
Bradley, you are using a trunk build. The crash is occuring on branch builds only.
Thanks for the info, nosebleed - it's hard to tell the builds apart. At least I showed that the bug is only found on branch builds, so I still helped ;)
Yeah I think I fixed this today.
Status: REOPENED → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
Flags: blocking0.8? → blocking0.8+
alanjstr: Setting +blocking is reserved for drivers.
Flags: blocking0.8+ → blocking0.8?
I set that because Ben set the milestone to 0.8
OT: Is there a place where the behaviors expected of bug reporters and bug posters are clearly defined, and the list of controls that both groups can manipulate (and how) are easily defined? Sorry for OT bugspam.
Pre-release cleanup
Flags: blocking0.8? → blocking0.8+
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: