Fix crash bug 228986 - crash after installing two extensions after a restart